--- a/ckanext/ckanext-sixodp_ui/src/scss/base/layout.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/base/layout.scss
@@ -40,8 +40,8 @@ body {
   width: 100%;
   margin: 0 auto;
 
-  @media (min-width: $width-xs) {
-    width: 80%;
+  @media (min-width: $width-sm) {
+    width: 90%;
   }
 
   @media (min-width: $width-md) {
@@ -59,6 +59,8 @@ body {
 }
 
 [role=main] {
+  background: $brand-background;
+
   .primary {
     float: right;
     margin-left: 0;
