--- a/ckanext/ckanext-sixodp_ui/src/scss/base/variables.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/base/variables.scss
@@ -6,6 +6,7 @@ $gray-base: #57575b;
 $black: $gray-base;
 $white: #ffffff;
 
+$brand-background: #f5f5f5;
 $brand-primary: #534f97;
 $brand-success: #97ba54;
 $brand-info: #446eb5;
