--- a/ckanext/ckanext-sixodp_ui/src/scss/components/module.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/module.scss
@@ -23,5 +23,13 @@
     &:last-child {
       margin-bottom: 0;
     }
+
+    @media (max-width: $width-sm - 1) {
+      padding: 0;
+
+      &.page-header:first-child {
+        margin-top: $margin-base-vertical;
+      }
+    }
   }
 }
