--- a/ckanext/ckanext-sixodp_ui/src/scss/components/page-header.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/page-header.scss
@@ -1,4 +1,5 @@
 .page-header {
+    background-color: $brand-background;
     padding-bottom: 0;
     border: none;
 }
